package org.example;

public enum UserType {
    ADMIN, USER
}
